--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,3 +1,5 @@
+@use "./variables" as *;
+
 * {
   box-sizing: border-box;
 }
@@ -6,12 +8,48 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.6;
-  background-color: #f5f5f5;
-  color: #222;
+  background-color: $color-bg;
+  color: $color-text;
 }
 
 .container {
   max-width: 1100px;
   margin: 0 auto;
   padding: 1rem;
+  background-color: $color-white;
 }
+
+.site-header {
+  background: $color-primary;
+  padding: 1rem;
+  border-radius: 1rem;
+
+  .logo {
+    margin: 0;
+    color: $color-white;
+  }
+
+  .nav {
+    .nav-ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      gap: 1rem;
+
+      li {
+        a {
+          text-decoration: none;
+          color: $color-white;
+          font-weight: bold;
+
+          &:hover {
+            text-decoration: underline;
+            color: $color-accent-mint;
+          }
+        }
+      }
+    }
+  }
+}
+
