--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -53,3 +53,23 @@ body {
   }
 }
 
+.hero {
+  margin-top: 1rem;
+
+  &-img {
+    width: 100%;
+    display: block;
+    border-radius: 1rem;
+  }
+
+  &-content {
+    padding: 1rem 0;
+  }
+}
+
+.featured-img {
+  width: 100%;
+  display: block;
+  margin-top: 0.75rem;
+  border-radius: 1rem;
+}
