--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,4 +1,5 @@
-@use "./variables" as *;
+@use "./variables" as var;
+@use "./mixins" as mix;
 
 * {
   box-sizing: border-box;
@@ -8,44 +9,50 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.6;
-  background-color: $color-bg;
-  color: $color-text;
+  background-color: var.$color-bg;
+  color: var.$color-text;
 }
 
 .container {
   max-width: 1100px;
   margin: 0 auto;
   padding: 1rem;
-  background-color: $color-white;
+  background-color: var.$color-white;
 }
 
 .site-header {
-  background: $color-primary;
   padding: 1rem;
   border-radius: 1rem;
+  background: linear-gradient(
+    135deg,
+    var.$color-secondary,
+    var.$color-primary
+  );
 
   .logo {
     margin: 0;
-    color: $color-white;
   }
 
   .nav {
+    margin-top: 1rem;
+  
     .nav-ul {
       list-style: none;
       padding: 0;
       margin: 0;
       display: flex;
-      gap: 1rem;
+      justify-content: center;
+      gap: 1.5rem;
 
       li {
         a {
           text-decoration: none;
-          color: $color-white;
+          color: var.$color-white;
           font-weight: bold;
 
           &:hover {
             text-decoration: underline;
-            color: $color-accent-mint;
+            color: var.$color-accent-mint;
           }
         }
       }
@@ -67,9 +74,41 @@ body {
   }
 }
 
+.featured-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 0.75rem
+}
+
+.featured-img:nth-child(3n + 1) {
+  grid-column: span 2;
+  aspect-ratio: 16 / 9;
+}
+
 .featured-img {
   width: 100%;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
   display: block;
   margin-top: 0.75rem;
-  border-radius: 1rem;
+  border-radius: 0.75rem;
 }
+
+@media (min-width: 620px) {
+  .featured-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .featured-img:nth-child(3n + 1) {
+    grid-column: span 1;
+    aspect-ratio: 1 / 1;
+  }
+}
+
+.logo {
+  font-size: clamp(2.8rem, 5vw, 4rem);
+  margin: 0;
+
+  @include mix.sassy-logo(var.$color-mint, var.$color-purple);
+}
+
