--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,16 @@
+/* Färger */
 $color-bg: #fdf2f8;
-$color-primary: #f472b6;
-$color-secondary: #fbcfe8;
+$color-primary: #f9a8d4;
+$color-secondary: #fde2f0;
 $color-text: #222;
 $color-white: #ffffff;
 $color-accent-mint: #a7f3d0;
+
+/* Logga */
+$font-logo: 'Pacifico', cursive;
+$color-mint: #00fdce;
+$color-purple: #cbb7e2;
+$color-bg: #fff;
+
+
+   
