Implementerar mörkt tema via SASS och prefers-color-scheme

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,5 +12,13 @@ $color-mint: #00fdce;
 $color-purple: #cbb7e2;
 $color-bg: #fff;
 
+/* Dark theme */
+$dark-bg: #120914;
+$dark-text: #f7f2f6;
+
+$dark-primary: #2a1330;
+$dark-secondary: #4a1f3f;
+$dark-black: #000000;
+
 
    
