--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -23,19 +23,20 @@ body {
 .site-header {
   padding: 1rem;
   border-radius: 1rem;
-  background: linear-gradient(
-    135deg,
-    var.$color-secondary,
-    var.$color-primary
-  );
+  background: linear-gradient(135deg,
+      var.$color-secondary,
+      var.$color-primary );
 
   .logo {
+    font-size: clamp(2.8rem, 5vw, 4rem);
     margin: 0;
+
+    @include mix.sassy-logo(var.$color-mint, var.$color-purple);
   }
 
   .nav {
     margin-top: 1rem;
-  
+
     .nav-ul {
       list-style: none;
       padding: 0;
@@ -70,28 +71,51 @@ body {
   }
 
   &-content {
-    padding: 1rem 0;
+    position: relative;
+    margin-bottom: 0.5rem;
+    padding: 1rem 0 1.5rem;
+    text-align: center;
+
+    &::after {
+      content: "";
+      position: absolute;
+      left: 50%;
+      bottom: 0;
+      transform: translateX(-50%);
+      width: 75%;
+      height: 4px;
+      border-radius: 999px;
+
+      background: linear-gradient(90deg,
+          var.$color-secondary,
+          var.$color-primary,
+          var.$color-accent-mint );
+    }
   }
 }
 
 .featured-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 0.75rem
+  gap: 0.75rem;
 }
 
-.featured-img:nth-child(3n + 1) {
-  grid-column: span 2;
-  aspect-ratio: 16 / 9;
-}
+.featured {
+  text-align: center;
 
-.featured-img {
-  width: 100%;
-  aspect-ratio: 1 / 1;
-  object-fit: cover;
-  display: block;
-  margin-top: 0.75rem;
-  border-radius: 0.75rem;
+  &-img:nth-child(3n + 1) {
+    grid-column: span 2;
+    aspect-ratio: 16 / 9;
+  }
+
+  &-img {
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+    display: block;
+    border-radius: 0.75rem;
+  }
+
 }
 
 @media (min-width: 620px) {
@@ -105,10 +129,50 @@ body {
   }
 }
 
-.logo {
-  font-size: clamp(2.8rem, 5vw, 4rem);
-  margin: 0;
-
-  @include mix.sassy-logo(var.$color-mint, var.$color-purple);
+.site-footer {
+  margin-top: 1rem;
+  padding: 1rem;
+  border-radius: 1rem;
+  text-align: center;
+  background: linear-gradient(135deg,
+      var.$color-secondary,
+      var.$color-primary );
 }
 
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: var.$dark-bg;
+    color: var.$dark-text;
+
+    .container {
+      background-color: var.$dark-black;
+      border-radius: 1rem;
+    }
+  }
+
+  .site-header {
+    background: linear-gradient(135deg,
+        var.$dark-secondary,
+        var.$dark-primary );
+    margin-bottom: 1rem;
+  }
+
+  .featured,
+  .main {
+    background-color: var.$dark-primary;
+    color: var.$dark-text;
+    border-radius: 1rem;
+    padding: 0.5rem 1rem;
+  }
+
+  a {
+    color: var.$dark-text;
+  }
+
+  .site-footer {
+    background: linear-gradient(135deg,
+        var.$dark-secondary,
+        var.$dark-primary );
+  }
+}
