--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,7 @@
 /* Färger */
-$color-bg: #fdf2f8;
+$color-bg: #faddec;
 $color-primary: #f9a8d4;
+$color-primary-darker: #cf7caa;
 $color-secondary: #fde2f0;
 $color-text: #222;
 $color-white: #ffffff;
@@ -10,7 +11,6 @@ $color-accent-mint: #a7f3d0;
 $font-logo: 'Pacifico', cursive;
 $color-mint: #00fdce;
 $color-purple: #cbb7e2;
-$color-bg: #fff;
 
 /* Dark theme */
 $dark-bg: #120914;
@@ -19,6 +19,11 @@ $dark-text: #f7f2f6;
 $dark-primary: #2a1330;
 $dark-secondary: #4a1f3f;
 $dark-black: #000000;
+$dark-purple: #5e124b;
+$dark-pink: #e51587;
+$dark-purple-pink: #ac4d95;
+$dark-purple-black: #1c0022;
+
 
 
    
