--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 @use "./variables" as var;
 
 @mixin sassy-logo($main, $shadow) {
@@ -6,4 +7,12 @@
   text-shadow:
     2px 2px 0 $shadow,
     4px 4px 0 rgba(0, 0, 0, 0.15);
+}
+
+@mixin readable-text($bg) {
+  @if color.channel($bg, "lightness", $space: hsl) > 55% {
+    color: var.$dark-purple;
+  } @else {
+    color: var.$color-accent-mint;
+  }
 }
