--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,6 +1,7 @@
 @use "sass:color";
-@use "./variables" as var;
+@use "variables" as var;
 
+/* Logotyp-stil med färg + skugga */
 @mixin sassy-logo($main, $shadow) {
   font-family: var.$font-logo;
   color: $main;
@@ -9,6 +10,7 @@
     4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 
+/* Väljer en läsbar textfärg baserat på bakgrundens ljushet */
 @mixin readable-text($bg) {
   @if color.channel($bg, "lightness", $space: hsl) > 55% {
     color: var.$dark-purple;
