--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-@use './variables';
-@use './mixins';
-@use './base';
-@use "./utilities";
+@use "variables";
+@use "mixins";
+@use "base";
+@use "utilities";
